[package]
name = "boxes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
piston = "0.53.2"
piston-texture = "0.9.0"
piston_window = "0.127.0"
piston2d-graphics = "0.43.0"
piston2d-opengl_graphics = "0.82.0"
piston2d-sprite = "0.67.0"
rand = "0.8.5"
